# netbox-meraki

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  README.md  pyproject.toml  requirements.txt
netbox_meraki/: __init__.py  admin.py  forms.py  jobs.py  meraki_client.py  models.py  navigation.py  sync_service.py  urls.py  views.py
netbox_meraki/api/: serializers.py  views.py
netbox_meraki/management/commands/: repair_meraki_schedules.py  sync_meraki.py
netbox_meraki/migrations/: 0002_security_compat_remediation.py  0003_merakischedule_and_fixups.py  0004_backfill_legacy_schedule_links.py  0005_merakivlanresolutionrule.py  0006_alter_synclog_options_alter_syncreview_options_and_more.py  0007_pluginsettings_meraki_connection_fields.py
netbox_meraki/templates/netbox_meraki/: base.html  config.html  dashboard.html  job_history.html  prefixfilterrule_confirm_delete.html  prefixfilterrule_form.html  review_detail.html  review_item_edit.html  review_list.html  scheduled_sync.html  scheduled_sync_edit.html  sitenamerule_confirm_delete.html  sitenamerule_form.html  sitenamerule_list.html  sync.html  synclog.html  vlanresolutionrule_confirm_delete.html  vlanresolutionrule_form.html  vlanresolutionrule_list.html
netbox_meraki/templatetags/: meraki_extras.py
netbox_meraki/tests/: test_forms.py  test_meraki_client.py  test_plugin_settings.py  test_review_ui.py  test_sync_service.py
