[project]
name = "netbox-meraki"
version = "2.0.0"
description = "Maintained NetBox 4.4.x-4.5.x fork for synchronizing Cisco Meraki inventory"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "cryptography>=46.0.0",
]
authors = [
    { name = "Tarani Debnath" }
]
keywords = ["netbox", "meraki", "cisco", "plugin", "network", "automation", "ipam", "dcim"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/josh-marchant/netbox-meraki"
Repository = "https://github.com/josh-marchant/netbox-meraki"
Issues = "https://github.com/josh-marchant/netbox-meraki/issues"
Changelog = "https://github.com/josh-marchant/netbox-meraki/blob/master/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["netbox_meraki*"]

[tool.setuptools.package-data]
netbox_meraki = ["templates/**/*.html"]
